fix: remove overflow hidden for body

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body,
 html {
 	padding: 0;
 	margin: 0;
-	overflow: hidden;
 	background-color: rgba(0, 0, 0, 0);
 	position: relative;
 	user-select: none !important;
